Added seats and docs working
